k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: my-webapp
  labels:
    env: production
