k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: my-webapp
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
